connect viewers to user

--- a/app/views/pages/_dashboard.html.erb
+++ b/app/views/pages/_dashboard.html.erb
@@ -9,7 +9,7 @@
 
 <div class="container" style="box-shadow: 1px 1px 10px #444;border-radius: 5px;">
 
-	<!-- Qurriculum index area -->
+	<!-- Viewer index area -->
 	<div class="row" style="padding:15px 0 50px 0;">
 		<div class="span4">
 			<button class="btn btn-large btn-primary btn-block" href="#">Create Viewer</button>
@@ -19,7 +19,7 @@
 				<button class="btn btn-small pull-right" href="#"><i class="icon-play-circle" style="margin-right:3px;"></i>Add Video</button>
 
 				<div style="margin-top:20px;">
-				<%= link_to "Your Viewers", qurriculums_path, class: "btn btn-large btn-block" %>
+				<%= link_to "Your Viewers", viewers_path, class: "btn btn-large btn-block" %>
 				</div>
 			</div>
 
