--- a/app/views/viewers/_form.html.erb
+++ b/app/views/viewers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@qurriculum, html: { class: "form-horizontal"}) do |f| %>
+<%= simple_form_for(@viewer, html: { class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
