add profileImage with paperclip

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,8 @@
     <%= f.input :email, :required => true, :autofocus => true %>
     <%= f.input :password, :required => true %>
     <%= f.input :password_confirmation, :required => true %>
+    </br>
+    <%= f.input :image, label: "Upload an image" %>
   </div>
 
   <div class="form-actions">
