--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -1,42 +1,62 @@
 <div class="container">
-	<div id="wrapper">
-		
-	</div>
+	<% if current_user == @viewer.user %>
+		<%= link_to 'Edit', edit_viewer_path(@viewer) %> |
+		<%= link_to 'Back', viewers_path %>
+	<% end %>
 
-	<!-- Tabs area -->
-	<div class="tabbable span8">
-		<ul class="nav nav-tabs">
-      <li class="active"><a href="#tab1" data-toggle="tab">Mijn CV</a></li>
-      <li><a href="#tab2" data-toggle="tab">Motivatiebrief</a></li>
-	  </ul>
-	  <div class="tab-content">
-	    <div id="tab1" class="tab-pane active">
-	        <p>Content of CV</p>
-	    </div>
-	    
-	    <div id="tab2" class="tab-pane">
-				<p>Content of Motivatiebrief</p>
-			</div>
-		
+	<div class="box" id="firstBox">
+		<iframe id="video" src="http://player.vimeo.com/video/65893618?autoplay=0" width="820" height="458" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		<div style="margin:auto;">
+			<h3 style="line-height: 115%;">Hallo <%= @viewer.company %>. Mijn naam is <%= @viewer.user.name %>.
+			</br>
+			Ik wil graag onderdeel uitmaken van uw team.</h3>
+		</div>
+		<div class="btn-group" style="margin:auto; margin-bottom: 10px;">
+			<button class="span2 btn btn-large btn-primary" href="#">Contact Nu</button>
+			<button class="span2 btn btn-large btn-block" href="#">Download CV</button>
 		</div>
 	</div>
 
-	<!-- Personal summary area -->
-	<div class="span4">
+	<div class="row">
+	
+		<!-- Tabs area -->
+		<div class="box tabbable span9">
+			<ul class="nav nav-tabs">
+	      <li class="active"><a href="#tab1" data-toggle="tab">Mijn CV</a></li>
+	      <li><a href="#tab2" data-toggle="tab">Motivatiebrief</a></li>
+		  </ul>
+		  <div class="tab-content">
+		    <div id="tab1" class="tab-pane active">
+		        <p>Content of CV</p>
+		    </div>
+		    
+		    <div id="tab2" class="tab-pane">
+					<p>Content of Motivatiebrief</p>
+				</div>
+			
+			</div>
+		</div>
+
+		<!-- Personal summary area -->
+		<div class="box span3">
+			<div style="margin:10px;"> <!-- to set margins properly -->
+				<div>
+					<%= image_tag @viewer.user.image(:medium) %>
+				</div>
+				
+				<div>
+					<h3>Contact</h3>
+					<p style="font-size: 110%; line-height:110%;">
+						<%= @viewer.user.name %> </br>
+						<%= @viewer.user.email %> </br>
+						<%= @viewer.user.name %> </br>
+					</p>
+				</div>
+				<div class="btn-group">
+					<button class="btn btn-primary" href="#">Contact</button>
+					<button class="btn" href="#">Download CV</button>
+				</div>
+			</div>
+		</div>
 	</div>
-
 </div>
-
-<p>
-  <b>Company:</b>
-  <%= @viewer.company %>
-</p>
-
-<p>
-  <b>Vacancy:</b>
-  <%= @viewer.vacancy %>
-</p>
-
-
-<%= link_to 'Edit', edit_viewer_path(@viewer) %> |
-<%= link_to 'Back', viewers_path %>
