--- a/app/views/pages/_dashboard.html.erb
+++ b/app/views/pages/_dashboard.html.erb
@@ -9,10 +9,10 @@
 <!-- Viewer index area -->
 <div class="row" style="padding:15px 0 50px 0;">
 	<div class="span4">
-		<button class="btn btn-large btn-primary btn-block" href="#">Create Viewer</button>
+		<button class="btn btn-large btn-primary btn-block" href="new_viewer_path">Create Viewer</button>
 		
 		<div style="margin-top:20px;">
-			<button class="btn btn-small" href="#">Edit all Viewers</button>
+			<button class="btn btn-small" href="edit_user_registration_path">Edit all Viewers</button>
 			<button class="btn btn-small pull-right" href="#"><i class="icon-play-circle" style="margin-right:3px;"></i>Add Video</button>
 
 			<div style="margin-top:20px;">
