design viewer to include pdf

--- a/app/views/viewers/_form.html.erb
+++ b/app/views/viewers/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :company %>
     <%= f.input :vacancy %>
+    <%= f.input :resume, label: "Upload your Resume (pdf)" %>
   </div>
 
   <div class="form-actions">
