--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -27,7 +27,7 @@
 		  </ul>
 		  <div class="tab-content">
 		    <div id="tab1" class="tab-pane active">
-		        <p>Content of CV</p>
+	        <iframe src="https://docs.google.com/gview?url=http://vicancy.com/aanmaken/pdfbestanden/FAQ_versie_1.pdf&embedded=true"></iframe>
 		    </div>
 		    
 		    <div id="tab2" class="tab-pane">
