--- a/app/views/layouts/viewer.html.erb
+++ b/app/views/layouts/viewer.html.erb
@@ -22,6 +22,15 @@
 			box-shadow: 1px 1px 10px #999;
 			margin-top: 20px;
 		}
+    .tab-content iframe {
+      display: block;
+      min-width: 96%;
+      min-height: 500px;
+      margin: auto;
+      margin-bottom: 15px;
+      box-shadow: 1px 1px 10px #c1c1c1;
+      border: 0px none transparent;
+    }
   </style>
 </head>
 <body>
