--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing viewers</h1>
+  <h1>Listing viewers</h1>
 
-<table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered">
   <tr>
     <th>Company</th>
     <th>Vacancy</th>
@@ -10,18 +10,17 @@
     <th></th>
   </tr>
 
-<% @viewers.each do |viewer| %>
+  <% @viewers.each do |viewer| %>
   <tr>
     <td><%= viewer.company %></td>
     <td><%= viewer.vacancy %></td>
-    <td><%= viewer.user.image %></td>
     <td><%= link_to 'View', viewer %></td>
     <td><%= link_to 'Edit', edit_viewer_path(viewer) %></td>
     <td><%= link_to 'Delete', viewer, method: :delete, data: { confirm: 'Are you sure? The viewer will be deleted forever.' } %></td>
   </tr>
-<% end %>
-</table>
+  <% end %>
+  </table>
 
-<br />
+  <br />
 
-<%= link_to 'New Viewer', new_viewer_path %>
+  <%= link_to 'New Viewer', new_viewer_path, class: 'btn btn-large btn-primary' %>
