--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -5,7 +5,7 @@
 	<% end %>
 
 	<div class="box" id="firstBox">
-		<iframe id="video" src="http://player.vimeo.com/video/65893618?autoplay=0" width="820" height="458" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		<iframe id="video" src="http://player.vimeo.com/video/<%= @viewer.user.videoid %>?autoplay=0" width="820" height="458" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 		<div style="margin:auto;">
 			<h3 style="line-height: 115%;">Hallo <%= @viewer.company %>. Mijn naam is <%= @viewer.user.name %>.
 			</br>
