look and feel upd

--- a/app/views/layouts/viewer.html.erb
+++ b/app/views/layouts/viewer.html.erb
@@ -19,8 +19,8 @@
   		margin:-40px auto 20px auto;
   	}
   	#video {
-			box-shadow: 1px 1px 10px #999;
-			margin-top: 20px;
+			/*box-shadow: 1px 1px 10px #999;*/
+			/*margin-top: 20px;*/
 		}
     .tab-content iframe {
       display: block;
