--- a/app/views/viewers/edit.html.erb
+++ b/app/views/viewers/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing viewer</h1>
+<div class="white-box">
+	<h1>Editing viewer</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @viewer %> |
-<%= link_to 'Back', viewers_path %>
+	<%= link_to 'Show', @viewer %> |
+	<%= link_to 'Back', viewers_path %>
+
+</div>
+
