--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -1,5 +1,16 @@
-  <h1>Listing viewers</h1>
-
+<div class="white-box"> 
+  <h1>Dashboard</h1>
+  <div class="row">
+    <div class="span3">
+      <a href="/viewers" class="btn btn-large btn-block">Your Viewers</a>
+    </div>
+    <div class="span4">
+      <a href="/viewers/new" class="btn btn-small ">Edit all Viewers</a>
+      <a href="/videowizard" class="btn btn-small ">Add video</a>
+    </div>
+  </div>
+  
+  <h3>Listing viewers</h3>
   <table class="table table-striped table-bordered">
   <tr>
     <th>Company</th>
@@ -24,3 +35,5 @@
   <br />
 
   <%= link_to 'New Viewer', new_viewer_path, class: 'btn btn-large btn-primary' %>
+
+</div>
