--- a/app/views/pages/_dashboard.html.erb
+++ b/app/views/pages/_dashboard.html.erb
@@ -1,3 +1,12 @@
+<% if user_signed_in? %>
+
+	<%= render 'dashboard' %>
+
+<% else %>
+
+	<%= render 'landingpage' %>
+
+<% end %>
 <div id="toparea">
 	<div style="margin-left:25px;">
 		<img src="#" id="logo"/>
