--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -1,4 +1,6 @@
-<div class="white-box"> 
+<% if user_signed_in? %>
+
+  <div class="white-box"> 
   <h1>Dashboard</h1>
   <div class="row">
     <div class="span3">
@@ -37,3 +39,9 @@
   <%= link_to 'New Viewer', new_viewer_path, class: 'btn btn-large btn-primary' %>
 
 </div>
+
+<% else %>
+
+  <%= render 'pages/landingpage' %>
+
+<% end %>
