--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -89,7 +89,10 @@ header {
 #video {
 	margin: 0 auto;
 	padding-top: 60px;
-	width: 820px;
+	iframe{
+		width: 100%;
+		min-height: 420px;
+	}
 }
 
 .buttons {
@@ -152,8 +155,6 @@ a.powered-by {
 	}
 	.company {
 		background: #FFF;
-		width: 320px;
-		float: left;
 	}
 }
 .white-box{
@@ -165,8 +166,6 @@ a.powered-by {
 }
 
 #content {
-	background: #FFF;
-	padding: 10px 25px;
 	color: #676767;
 	min-height: 289px;
 }
@@ -224,4 +223,31 @@ a.powered-by {
 			top: 0px;
 		}
 	}
+}
+
+.tab-content{
+	background: #FFF;
+	padding: 10px 0px;
+}
+
+#contact-area{
+	padding: 10px 0;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	.company{
+		padding: 10px;
+	}
+	*{
+		box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+	}
+}
+
+@media (max-width: 979px) {
+  body {
+    padding-top: 0;
+    margin-top: 0;
+  }
 }
