--- a/app/views/viewers/_form.html.erb
+++ b/app/views/viewers/_form.html.erb
@@ -1,13 +1,36 @@
-<%= simple_form_for(@viewer, html: { class: "form-horizontal"}) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for(@viewer, html: { class: "form-horizontal", multipart: true}) do |f| %>
+    <%= @viewer.errors.full_messages.to_sentence %>
 
   <div class="form-inputs">
     <%= f.input :company %>
     <%= f.input :vacancy %>
-    <%= f.input :resume, label: "Upload your Resume (pdf)" %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
   </div>
+
+	<div class="files-list">
+		<ul>
+			<% for file_upload in @viewer.file_uploads %>
+			    <li>
+			    	<% if file_upload.new_record? %>
+			    		<%= f.fields_for :file_uploads, file_upload do |fu| %>
+							<div class="form-inputs">
+								<%= fu.text_field :name %>
+								<%= fu.file_field :file %>
+							</div>
+						<% end %>
+			    	<% else %>
+				    	<%= link_to "Edit", edit_viewer_file_path(@viewer, file_upload) %> | 
+				    	<%= link_to "Remove", viewer_file_path(@viewer, file_upload), method: :delete, confirm: "Are you sure?" %>
+				    	<strong><%= file_upload.name %></strong>
+				    	<%= file_upload.file_file_name %>
+				    <% end %>
+			    </li>
+			<% end %>
+			
+		</ul>
+		<%#= link_to "New file", new_viewer_file_path(@viewer), class: "btn" %>
+	</div>
 <% end %>
