--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -20,8 +20,8 @@
 			<div class="buttons">
 
 				<div class="btn-group">
-					<a class="btn btn-xlarge btn-primary" href="#">Reply</a>
-					<a class="btn btn-xlarge share" href="#">Share</a>
+					<a class="btn btn-large btn-primary" href="#">Reply</a>
+					<a class="btn btn-large share" href="#">Share</a>
 				</div>
 
 				<div class="share-box">
@@ -41,24 +41,15 @@
 			<div class="row-fluid">
 				<div id="content" class="span8">
 					<ul class="nav tabs">
-						<li class="active"><a href="#tab1" data-toggle="tab">Mijn CV</a></li>
-						<li><a href="#tab2" data-toggle="tab">Motivatiebrief</a></li>
-						<% for file in @viewer.file_uploads %>
-							<li><a href="#file-<%= file.id %>" data-toggle="tab"><%= file.name %></a></li>
+						<% @viewer.file_uploads.each_with_index do |file, i| %>
+							<li <%== 'class="active"' if i ==0 %>><a href="#file-<%= file.id %>" data-toggle="tab"><%= file.name %></a></li>
 						<% end %>
 					</ul>
 					<div class="tab-content">
-						<div id="tab1" class="tab-pane active">
-							<iframe src="https://docs.google.com/gview?url=http://vicancy.com/aanmaken/pdfbestanden/FAQ_versie_1.pdf&embedded=true"></iframe>
-						</div>
-
-						<div id="tab2" class="tab-pane">
-							<p>Content of Motivatiebrief</p>
-						</div>
-						<% for file in @viewer.file_uploads %>
-							<div id="file-<%= file.id %>" class="tab-pane">
-								<%= file.file_file_name %> | 
-								<%= file.file.url %>
+						<% @viewer.file_uploads.each_with_index do |file, i|  %>
+							<div id="file-<%= file.id %>" class="tab-pane <%== 'active' if i ==0 %>">
+								<iframe src="https://docs.google.com/gview?url=<%= file.file.url %>&embedded=true"></iframe>
+								
 							</div>
 						<% end %>
 					</div>
