--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -35,12 +35,13 @@ header {
 	box-shadow:  0px 1px 5px 1px #999;
 }
 
-#video {
+#firstBox {
 	margin: 0 auto;
 	padding-top: 60px;
 	iframe{
-		width: 100%;
-		min-height: 420px;
+		width: 90%;
+		max-width: 820px;
+		height: 458px;
 	}
 }
 
@@ -191,6 +192,15 @@ a.powered-by {
 		box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
+	}
+}
+
+.files-list{
+	ul{
+		list-style: none;
+		li{
+			margin-top: 10px;
+		}
 	}
 }
 
