--- a/app/views/pages/_landingpage.html.erb
+++ b/app/views/pages/_landingpage.html.erb
@@ -1,6 +1,84 @@
-<h1>Welcome to Qurriculum!</h1>
-<p>This here will be the landingpage. </br>We will host all sorts of nice HTML here, and a nice Call to Action.</p>
-<div class="btn-group">
-	<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-large btn-primary" %>
-	<%= link_to "Login", new_user_session_path, class: "btn btn-large"%>
+<div id="landingpage">
+
+	<!-- Der Masthead -->
+	<div class="masthead">
+	  <div class="container" style="text-align: center;">
+	    <h1>Solliceo</h1>
+	    <div style="margin:20px auto -20px">
+		    <h4 style="margin-top:20px;">
+		    	Je solliciteert op de functie van je dromen. Net als 100 anderen.
+		    	</br>
+		    	Binnen 6 seconden besluit de recruiter over jou toekomst.
+		    </h4>
+		    <h2>Je hebt één kans om op te vallen...</h2>
+		  </div>
+	  </div>
+	</div>
+
+	<div class="container">
+    <div class="row-fluid">
+			
+			<div class="span4 offset4">
+				<a class="btn btn-inverse btn-block btn-large" href="http://solliceo.herokuapp.com/viewers/5" target="_blank">Bekijk de Demo ;)</a>
+			</div>
+		</div>
+
+  	<hr class="soften">
+
+  	<!-- What & Why -->
+    <div class="row-fluid">
+      <div class="span5 well" style="background-color:#fff;">
+      	<h3>Wat is Solliceo?</h3>
+      	<p>
+      		Waar u vroeger een goede eerste indruk neerzette met een handdruk of een strak pak, 
+          <br>vindt de eerste ontmoeting tegenwoordig steeds vaker plaats op het web. 
+          Of het nu gaat om het presenteren van uw professionele profiel of 
+          het zoeken naar een baan, een goede eerste indruk op het web is vaak het halve werk.   
+      	</p>
+      </div>
+
+      <div class="span5 offset2 well" style="background-color:#fff;">
+      	<h3>Waarom Solliceo?</h3>
+      	<p>
+					Waar u vroeger een goede eerste indruk neerzette met een handdruk of een strak pak, 
+          <br>vindt de eerste ontmoeting tegenwoordig steeds vaker plaats op het web. 
+          Of het nu gaat om het presenteren van uw professionele profiel of 
+          het zoeken naar een baan, een goede eerste indruk op het web is vaak het halve werk.   
+      	</p>
+      </div>
+    </div>
+
+  	<hr class="soften">
+
+    <div class="row-fluid">
+			<div class="span8 offset2">
+				<h2 style="text-align:center;"><em>"Solliceo is so super awesome. It hurts!"</em></h2>
+				<p style="text-align:center;">Tjalling, (voormalig) werkzoekende</p>
+			</div>
+		</div>
+
+		<div class="row-fluid" style="margin-top:30px;">
+			<div class="btn-group span4 offset4">
+				<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-large btn-inverse span6" %>
+				<%= link_to "Login", new_user_session_path, class: "btn btn-large span6"%>
+			</div>    
+    </div>
+
+	</div>
+
+</div>
+
+<!--  Modals 
+====================================================-->
+<div id="demo-viewer-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true" style="width:1000px;">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Zo ga jij solliciteren:</h3>
+  </div>
+  <div class="modal-body">
+    <iframe style="width:96%; height: auto;" src="http://quiet-brook-1161.herokuapp.com/viewers/4"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
 </div>
