try patching bootstrap error on production

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,5 +1,6 @@
 // Core variables and mixins
-@import "bootstrap";
+@import 'bootstrap';
+@import 'bootstrap-responsive';
 
 body {
 	margin-top: 50px;
