add contactInfo to users

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
     <%= f.input :image, label: "Upload an image" %>
   </div>
 
-  <div class="form-actions">
+  <div>
     <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
