--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -7,7 +7,7 @@
     
     <div class="row-fluid">
       <div class="span4 well">
-        <a href="/viewers" class="btn btn-large btn-block">Maak nu jou video</a>
+        <a href="/viewers" class="btn btn-large btn-block">Maak nu jouw video</a>
 
         <h3>Listing viewers</h3>
         <table class="table table-bordered" style="background-color:#f5f5f5;">
@@ -57,6 +57,8 @@
             Pellentesque non lacus quis mi porttitor rutrum quis id turpis. Sed in justo non arcu blandit molestie mollis ac nibh. In scelerisque enim leo. Fusce at sem nec purus dignissim lobortis tempor vel dui. Cras eu est a turpis dignissim sollicitudin sed non diam. Cras convallis sem in quam auctor lacinia. Curabitur elementum mattis odio, cursus congue dui tempor vitae. Aenean mattis lobortis tincidunt. 
           </p>
         </div>
+
+      </div>
 
     </div>
 
