--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,38 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h3>Account settings</h3>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs form-horizontal">
     <%= f.input :name, :required => true, :autofocus => true %> 
     <%= f.input :email, :required => true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :image, label: "Upload an image" %>
-
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+    <%= f.input :phone, label: "Phone number" %>
+    <%= f.input :linkedin, label: "LinkedIn account", placeholder: "paste your 'public profile' here" %>
+    <%= f.input :twitter, label: "Twitter account", placeholder: "example: @qieter" %>
+    <%= f.input :residence, label: "Residence city" %>
+    <%= f.input :image, label: "Profile image" %>
+    <%= f.input :current_password, label: "current password (required)", :required => true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div style="margin-bottom: 50px;">
+    <%= f.button :submit, "Update", class: "btn btn-primary" %>
+  </div>
+
+  <div class="form-inputs">
+    <div class="well" style="width:410px; margin-left:30px;">
+      
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+
+      <h4>Change password</h4>
+      <%= f.input :password, label: "new password", :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+      <%= f.input :password_confirmation, :required => false %>
+    </div>
+  </div>
+
+  <div>
+    <%= f.button :submit, "Update", class: "btn btn-primary" %>
   </div>
 <% end %>
 
