--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :email, :required => true, :autofocus => true %>
   </div>
 
-  <div class="form-actions">
+  <div>
     <%= f.button :submit, "Resend unlock instructions" %>
   </div>
 <% end %>
