--- a/app/views/layouts/viewer.html.erb
+++ b/app/views/layouts/viewer.html.erb
@@ -35,7 +35,6 @@
   </style>
 </head>
 <body>
-	<%= render 'layouts/header' %>
 	
 	<div class="row">
 		<div class="span8 offset2">
@@ -45,10 +44,13 @@
 		</div>
 	</div>	
 
-	<%= yield %>
+  <div>
+	
+   <%= yield %>
+  
+  </div>
 
-
-	<!-- <%= render 'layouts/footer' %> -->
+	<%= render 'layouts/footer' %>
 
 </body>
 </html>
