viewer#show design

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -4,7 +4,7 @@
 
 body {
 	margin-top: 50px;
-	background: #E3E3E3 url("/images/background.png");
+	background: #E3E3E3 url("/images/background_linkedin.png");
 	font-family: Arial, sans-serif;
 	color: #585858;
 	font-size: 15px;
