--- a/app/views/layouts/viewer.html.erb
+++ b/app/views/layouts/viewer.html.erb
@@ -13,7 +13,7 @@
   	}
   	.box {
   		background-color:#ffffff;
-			box-shadow: 1px 1px 10px #c1c1c1;
+			box-shadow: 1px 1px 10px #adadad;
   	}
   	#firstBox {
   		text-align: center;
@@ -31,6 +31,11 @@
       margin-bottom: 15px;
       box-shadow: 1px 1px 10px #c1c1c1;
       border: 0px none transparent;
+    }
+    .img-custom-style {
+      -webkit-border-radius: 0px 500px 500px 500px;
+      -moz-border-radius: 0px 500px 500px 500px;
+      border-radius: 0px 500px 500px 500px;
     }
   </style>
 </head>
