--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -20,35 +20,40 @@
 		  </br>
 		  Ik wil graag onderdeel uitmaken van uw team.</h3>
 		</div>
-		<div class="btn-group" style="margin:auto; margin-bottom: 10px;">
-		  <button class="span2 btn btn-large btn-primary">Contact Nu</button>
+		<div class="btn-group" style="margin:auto; margin-bottom: 30px;">
+		  <button class="span2 btn btn-large btn-primary" data-target="#contact-modal" data-toggle="modal">Contact Nu</button>
 		  <button class="span2 btn btn-large btn-block" data-target="#attached-files-modal" data-toggle="modal">Download CV</button>
 		</div>
 	</div>
 
 	<div class="content">
 		<div class="row-fluid">
-			<div id="content" class="span8">
+			
+			<div id="content" class="span9">
 				<ul class="nav tabs">
 					<% @viewer.file_uploads.each_with_index do |file, i| %>
 						<li <%== 'class="active"' if i ==0 %>><a href="#file-<%= file.id %>" data-toggle="tab"><%= file.name %></a></li>
 					<% end %>
 				</ul>
-				<div class="tab-content">
+				<div class="tab-content box">
 					<% @viewer.file_uploads.each_with_index do |file, i|  %>
-						<div id="file-<%= file.id %>" class="tab-pane <%== 'active' if i ==0 %>">
+						<div id="file-<%= file.id %>" class="tab-pane <%== 'active' if i ==0 %>" style="text-align: center;">
 							<iframe src="https://docs.google.com/gview?url=<%= file.file.url %>&embedded=true"></iframe>
-							<p style="padding-left: 15px;"><%= link_to "Download", file.file.url, target: '_blank' %></p>
+							<div class="btn-group" style="margin:auto; margin-bottom: 10px;">
+							  <button class="span6 btn btn-large btn-primary" data-target="#contact-modal" data-toggle="modal">Contact Nu</button>
+							  <button class="span6 btn btn-large btn-block" data-target="#attached-files-modal" data-toggle="modal">Download CV</button>
+							</div>
 						</div>
 					<% end %>
 				</div>
 			</div>
-			<div class="span4" id="contact-area">
-				<div class="company">
+
+			<div class="span3" id="contact-area">
+				<div class="box company" style="margin-top:30px;">
 					<div style="margin:10px;"> <!-- to set margins properly -->
 						<% unless @viewer.user.image.blank? %>
 						<div>
-							<%= image_tag @viewer.user.image(:medium) %>
+							<%= image_tag @viewer.user.image(:medium), class: "img-custom-style" %>
 						</div>
 						<% end %>
 						
@@ -84,8 +89,8 @@
 							</p>
 						</div>
 						<div class="btn-group">
-							<button class="btn btn-primary" href="#">Contact</button>
-							<button class="btn" href="#">Download CV</button>
+							<button class="btn btn-primary" data-target="#contact-modal" data-toggle="modal">Contact</button>
+							<button class="btn" data-target="#attached-files-modal" data-toggle="modal">Download CV</button>
 						</div>
 					</div>
 				</div>
@@ -96,6 +101,40 @@
 </div>
  
 <!-- Modal -->
+<div id="contact-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Contact info:</h3>
+  </div>
+  <div class="modal-body">
+  	<p style=" line-height:110%;">
+			<%= @viewer.user.name %> </br>
+			<%= @viewer.user.email %> </br>
+
+			<% unless @viewer.user.phone.blank? %>
+				<div>
+					<%= @viewer.user.phone %> </br>
+				</div>
+			<% end %>
+
+			<% unless @viewer.user.linkedin.blank? %>
+				<div>
+					<%= @viewer.user.linkedin %> </br>
+				</div>
+			<% end %>
+			
+			<% unless @viewer.user.twitter.blank? %>
+				<div>
+					<%= @viewer.user.twitter %> </br>
+				</div>
+			<% end %>
+		</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
+</div>
+
 <div id="attached-files-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
