Add profile image uploading through URL

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,7 @@
     <%= f.input :twitter, label: "Twitter account", placeholder: "example: @qieter" %>
     <%= f.input :residence, label: "Residence city" %>
     <%= f.input :image, label: "Profile image" %>
+    <%= f.input :image_remote_url, label: "profile image URL" %>    
     <%= f.input :current_password, label: "current password (required)", :required => true %>
   </div>
 
