--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,8 @@
     <%= f.input :password, :required => true %>
     <%= f.input :password_confirmation, :required => true %>
     </br>
-    <%= f.input :image, label: "Upload an image" %>
+    <%= f.input :image, label: "Upload an profile image" %>
+    <%= f.input :image_remote_url, label: "or enter a profile image URL" %>
   </div>
 
   <div>
