edit viewer experiment & general application function

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,8 +10,8 @@
     <%= f.input :linkedin, label: "LinkedIn account", placeholder: "paste your 'public profile' here" %>
     <%= f.input :twitter, label: "Twitter account", placeholder: "example: @qieter" %>
     <%= f.input :residence, label: "Residence city" %>
-    <%= f.input :image, label: "Profile image" %>
-    <%= f.input :image_remote_url, label: "profile image URL" %>    
+    <%= f.input :image, label: "Upload a profile image" %>
+    <%= f.input :image_remote_url, label: "or enter a profile image URL" %>    
     <%= f.input :current_password, label: "current password (required)", :required => true %>
   </div>
 
