--- a/app/views/viewers/_form.html.erb
+++ b/app/views/viewers/_form.html.erb
@@ -3,7 +3,7 @@
 
 	<div class="form-inputs">
 		<%= f.input :company %>
-		<%= f.input :vacancy %>
+		<%= f.input :vacancy, placeholder: "leave blank for open applications" %>
 	</div>
 	
 	<hr>
