--- a/app/views/viewers/edit.html.erb
+++ b/app/views/viewers/edit.html.erb
@@ -1,11 +1,32 @@
-<div class="white-box">
-	<h1>Editing viewer</h1>
+<div class="container">
+	<div class="row-fluid">
 
-	<%= render 'form' %>
+		<div class="white-box span12">
+			<div class="span6">
+				<h1>Editing viewer</h1>
+
+				<%= render 'form' %>
 
 
-	<%= link_to 'Show', @viewer %> |
-	<%= link_to 'Back', viewers_path %>
+				<%= link_to 'Show', @viewer %> |
+				<%= link_to 'Back', viewers_path %>
+			</div>
 
+			<div class="span6">
+
+			</div>
+
+		</div>
+	</div>
+
+	<div class="row-fluid">
+		<div class="span12">
+		
+			<!-- render show#viewer -->	
+			<!-- <iframe src=""></iframe> -->
+		
+		</div>
+
+	</div>
 </div>
 
