--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -2,6 +2,7 @@
 
   <div class="container"> 
     <div id="pagehead">
+      <img src="/images/logo_solliceo_transparent.png" style="width:200px; height:100%;"/>
       <h1>Dashboard</h1>
     </div>
     
