set 0-value of video to videowizard

--- a/app/views/pages/videowizard.html.erb
+++ b/app/views/pages/videowizard.html.erb
@@ -1,4 +1,5 @@
-<h1>Script your video today!</h1>
+<h1>Ready for video?</h1>
+<h3>Script your video today!</h3>
 <p>Here is some awesome text about how to use the wizard...</p>
 
 <div id="wufoo-p7x0r9">
