--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -14,7 +14,13 @@
 	<% end %>
 
 	<div class="box" id="firstBox">
-		<iframe id="video" src="http://player.vimeo.com/video/<%= @viewer.user.videoid %>?autoplay=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		
+		<% if @viewer.user.videoid == 0.0 %>
+			<iframe id="video" src="http://vicancy.wufoo.com/forms/solliceo-jouw-video-sollicitatie/" frameborder="0"></iframe>
+		<% else %>
+			<iframe id="video" src="http://player.vimeo.com/video/<%= @viewer.user.videoid %>?autoplay=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		<% end %>
+
 		<div style="margin:auto;">
 		  <h3 style="line-height: 115%;">Hallo <%= @viewer.company %>. Mijn naam is <%= @viewer.user.name %>.
 		  </br>
