--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -6,13 +6,46 @@
 	<meta property="og:video:type" content="application/x-shockwave-flash" />
 	<meta name="Description" content="<%= "Hallo #{@viewer.company}. Mijn naam is #{@viewer.user.name}. Ik wil graag onderdeel uitmaken van uw team." %>"><!-- meta description for search engines and social sharing -->
 <% end %>
-
-<div class="container">
+	
+	<!-- Edit modus -->
 	<% if current_user == @viewer.user %>
+	  <div class="navbar navbar-fixed-top navbar-inverse">
+	    <div class="navbar-inner">
+	    	<div class="container">
+  			
+      		<%= link_to "Solliceo", root_path, class: "brand" %>
+      		<ul class="nav">
+        		<li><%= link_to "Dashboard", root_path %></li>
+        		<li class="dropdown">
+        			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        				Edit
+        				<span class="caret"></span>
+        			</a>
+         			<ul class="dropdown-menu">
+        				<li><a data-target="#contact-modal" data-toggle="modal">Edit Video</a></li>
+        				<li><a data-target="#edit-files-modal" data-toggle="modal">Edit Files</a></li>
+        				<li><a data-target="#edit-contact-modal">Edit Contact Info</a></li>
+        				<li class="divider"></li>
+        				<li><a href="#">Account settings</a></li>
+        			</ul>
+        		</li>
+        	</ul>
+        	<ul class="nav pull-right">
+      		  <li><%= link_to "Apply to Job" %></li>
+            <li><%= link_to "Share" %></li>	
+      		</ul>
+	      </div>
+	    </div>
+  	</div>
+
+<!--
 		<%= link_to 'Edit', edit_viewer_path(@viewer) %> |
 		<%= link_to 'Back', viewers_path %>
+-->
 	<% end %>
 
+<div class="container">
+	
 	<div class="box" id="firstBox">
 		
 		<% if @viewer.user.videoid == 0.0 %>
@@ -150,6 +183,36 @@
     <% @viewer.file_uploads.each_with_index do |file, i|  %>
 		<p style="padding-left: 15px;"><%= link_to "#{file.name}(#{file.file_file_name})", file.file.url, target: '_blank' %></p>
 	<% end %>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
+</div>
+
+<div id="edit-files-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Edit your files:</h3>
+  </div>
+  <div class="modal-body">
+
+  	<%= render 'form' %>
+
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
+</div>
+
+<div id="edit-contact-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Edit contact info:</h3>
+  </div>
+  <div class="modal-body">
+
+
+
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
