Added sending applications to companies.

--- a/app/views/viewers/edit.html.erb
+++ b/app/views/viewers/edit.html.erb
@@ -8,6 +8,7 @@
 				<%= render 'form' %>
 
 
+				<%= link_to 'Apply now', new_application_path %> |
 				<%= link_to 'Show', @viewer %> |
 				<%= link_to 'Back', viewers_path %>
 			</div>
