replaced SMTP with direct Mandrill API usage, application form moved into a popup

--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -2,7 +2,7 @@
     <div class="row-fluid">
         <div class="white-box span12">
             <h1>Send your application!</h1>
-            <%= render 'form' %>
+            <%= render partial: 'form', locals: {application: @application} %>
         </div>
     </div>
 </div>
