changed iframe look.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #videowizard_questionnaire{
   width: 100%;
-  min-height: 30em;
+  height: 3950px;
   border: none;
-  overflow-y: scroll;
+  overflow: hidden;
 }
