--- a/app/views/pages/videowizard.html.erb
+++ b/app/views/pages/videowizard.html.erb
@@ -2,5 +2,12 @@
 <h3>Script your video today!</h3>
 <p>Here is some awesome text about how to use the wizard...</p>
 
-<iframe id="videowizard_questionnaire" src='http://vicancy.wufoo.com/embed/p7x0r9/def/embedKey=p7x0r9243794&referrer='>
-</iframe>
+<div class="container">
+    <div class="span4">
+        <iframe id="videowizard_questionnaire" src='http://vicancy.wufoo.com/embed/p7x0r9/def/embedKey=p7x0r9243794&referrer='>
+        </iframe>
+    </div>
+    <div class="span8">
+
+    </div>
+</div>
