--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 	
 	<!-- Edit modus -->
-	<% if current_user == @viewer.user %>
+	<!-- <% if current_user.id == @viewer.user.id %> -->
 	  <div class="navbar navbar-fixed-top navbar-inverse">
 	    <div class="navbar-inner">
 	    	<div class="container">
@@ -42,7 +42,7 @@
 		<%= link_to 'Edit', edit_viewer_path(@viewer) %> |
 		<%= link_to 'Back', viewers_path %>
 -->
-	<% end %>
+	<!-- <% end %> -->
 
 <div class="container">
 	
