viewer show mail link fix2

--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 	
 	<!-- Edit modus -->
-	<!-- <% if current_user.id == @viewer.user.id %> -->
+	<!-- <% if current_user == @viewer.user %>-->
 	  <div class="navbar navbar-fixed-top navbar-inverse">
 	    <div class="navbar-inner">
 	    	<div class="container">
