--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -194,7 +194,7 @@
   </div>
   <div class="modal-body">
 
-  	<%= render 'form' %>
+  	<%= render 'edit_form' %>
 
   </div>
   <div class="modal-footer">
